gitops/host/infrastructure/gateways/gw-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: api
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  - name: apipassthrough
    hostname: "*.api.${zone}.${cloud}.kubespaces.cloud"
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: All
