gitops/host/infrastructure/gateways/gw-apps.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: apps
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  infrastructure:
    annotations:
      service.beta.kubernetes.io/port_443_health-probe_protocol: tcp
      service.beta.kubernetes.io/port_80_health-probe_protocol: tcp
  gatewayClassName: istio
  listeners:
  - name: apps
    hostname: "*.apps.${zone}.${cloud}.kubespaces.cloud"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: apps-wildcard-tls
    allowedRoutes:
      namespaces:
        from: All
